[gd_scene load_steps=6 format=3 uid="uid://dcus3e1lnkiqj"]

[ext_resource type="Texture2D" uid="uid://bof3211rwmtev" path="res://Images/Egyptian.png" id="1_6dd3c"]
[ext_resource type="Script" uid="uid://b5ngergka1wik" path="res://Arena/Arena3D/ArenaScript/arena_ui.gd" id="1_e707p"]
[ext_resource type="PackedScene" uid="uid://be24omkufdto6" path="res://Cards/arena_card_details.tscn" id="1_q0uhn"]
[ext_resource type="AudioStream" uid="uid://ba11gf23vyw2l" path="res://Audio/Sound FX/CardDraw.mp3" id="2_dhe1o"]
[ext_resource type="PackedScene" uid="uid://hs2m5kkdydux" path="res://Cards/arena_terrain_details.tscn" id="3_f1fl4"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_e707p")

[node name="ArenaCardDetails" parent="." instance=ExtResource("1_q0uhn")]

[node name="ArenaTerrainDetails" parent="." instance=ExtResource("3_f1fl4")]
offset_left = -3.0
offset_top = 5.0
offset_right = -3.0
offset_bottom = 5.0

[node name="EnemyPortrait" type="TextureRect" parent="."]
visible = false
custom_minimum_size = Vector2(100, 100)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_right = 25.0
offset_bottom = 100.0
grow_horizontal = 2
texture = ExtResource("1_6dd3c")
expand_mode = 1
stretch_mode = 5

[node name="PlayerPortrait" type="TextureRect" parent="."]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="Hand" type="GridContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4
mouse_filter = 0
theme_override_constants/h_separation = 50
columns = 5

[node name="EndTurnButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -78.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "End Turn"

[node name="PhaseLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -128.0
offset_right = -687.0
offset_bottom = -2.57501
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="LogButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
toggle_mode = true
text = "Show Log"

[node name="BattleLogLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
autowrap_mode = 1

[node name="HPPanel" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="PlayerHP" type="Label" parent="HPPanel"]
layout_mode = 2

[node name="EnemyHP" type="Label" parent="HPPanel"]
layout_mode = 2

[node name="BattlePopup" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="SummonMode" type="PopupPanel" parent="."]
auto_translate_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="SummonMode"]
offset_left = 4.0
offset_top = 4.0
offset_right = 124.0
offset_bottom = 105.0

[node name="AttackMode" type="Button" parent="SummonMode/VBoxContainer"]
layout_mode = 2
text = "Attack Mode"

[node name="DefenseMode" type="Button" parent="SummonMode/VBoxContainer"]
layout_mode = 2
text = "Defense Mode"

[node name="FaceDown" type="Button" parent="SummonMode/VBoxContainer"]
layout_mode = 2
text = "Face Down"

[node name="FadeRect" type="ColorRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="EssencePanel" type="PanelContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -25.0
offset_right = 50.0
offset_bottom = -2.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="EssencePanel"]
layout_mode = 2

[node name="PlayerEssence" type="Label" parent="EssencePanel/VBoxContainer"]
layout_mode = 2

[node name="EnemyEssence" type="Label" parent="EssencePanel/VBoxContainer"]
layout_mode = 2

[node name="SFX" type="Node" parent="."]

[node name="CardDraw" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("2_dhe1o")
volume_db = -6.559
bus = &"SFX"

[connection signal="pressed" from="SummonMode/VBoxContainer/AttackMode" to="." method="_on_attack_mode_pressed"]
[connection signal="pressed" from="SummonMode/VBoxContainer/DefenseMode" to="." method="_on_defense_mode_pressed"]
[connection signal="pressed" from="SummonMode/VBoxContainer/FaceDown" to="." method="_on_face_down_pressed"]
